@@ -1,3 +1,10 @@
+.contentSpacing {
+    padding: 0 32px;
+    margin: 0;
+    max-width: 1955px;
+    background: linear-gradient(to bottom, #3c3034 0%, #000 100%);
+}
+
 .popularContainer {
     --column-width: 198px;
     --column-count: 7;
@@ -26,6 +33,7 @@
     font-family: var(--font-family, CircularSpTitle, CircularSpTitle-Tall, CircularSp-Arab, CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, var(--fallback-fonts, ));
     color: #ffffff;
 }
+
 .contentSpacing {
     padding: 0 32px;
     margin: 0;
@@ -33,12 +41,35 @@
     background: linear-gradient(to bottom, #3c3034 0%, #000 100%);
 }
 
+.colCount {
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: 0;
+}
+
 .grid {
-    --column-width: 198px;
-    --column-count: 7;
-    --grid-gap: 24px;
     margin-bottom: 40px;
     grid-gap: var(--grid-gap);
     display: grid;
     grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+}
+
+.cardSpacing {
+    --grid-gap: 24px;
+    --column-count: 7;
+    --column-width: 198px;
+    grid-gap: var(--grid-gap);
+    display: grid;
+    grid-template-columns: repeat(var(--column-count), minmax(0, 1fr));
+    grid-auto-rows: 0;
+    grid-template-rows: 1fr;
+    overflow-y: hidden;
+}
+
+.fansAlsoLike {
+    margin-bottom: 40px;
+    --column-width: 198px;
+    --column-count: 7;
+    --grid-gap: 24px;
+    display: inline-block;
 }
