@@ -25,11 +25,27 @@
                             </app-popular-section>
                         </div>
                     </div>
+
+                    
                 </div>
             </div>
             <div>
             </div>
         </div>
     </div>
+    <div class="fansAlsoLike">
+        <app-fans-also-like-header></app-fans-also-like-header>
+        <div class="d-flex cardSpacing">
+            <div *ngFor="let artistCard of artistCards">
+                <app-artist-card img={{artistCard.img}} artistName={{artistCard.artistName}}
+                    title={{artistCard.title}}>
+                    Loading...
+                </app-artist-card>
+            </div>
+        </div>
+    </div>
     <app-about-section></app-about-section>
 </div>
+
+
+
