@@ -1,6 +1,8 @@
 import { Component, OnInit } from '@angular/core';
 import { popular_sectionModel } from './navigation/Models/popular_section.mode';
 import { PopularSectionService } from 'src/app/services/popular-section.service';
+import { ArtistCardService } from 'src/app/services/artist-card.service';
+import { ArtistCardModel } from './navigation/Models/artist-card.model';
 
 @Component({
   selector: 'app-artist-page-layout',
@@ -10,8 +12,9 @@ import { PopularSectionService } from 'src/app/services/popular-section.service'
 export class ArtistPageLayoutComponent implements OnInit {
 
   popular_sections: popular_sectionModel[] = [];
+  artistCards: ArtistCardModel[] = [];
   
-  constructor(private PopularSectionService:PopularSectionService) {
+  constructor(private PopularSectionService:PopularSectionService, private ArtistCardService: ArtistCardService) {
     /* for mock list
     for (var popular_section of popular_section_list){
       this.popular_sections.push(popular_section);
@@ -26,7 +29,17 @@ export class ArtistPageLayoutComponent implements OnInit {
         console.log(popular_section);
         this.popular_sections.push(popular_section);
       }
+    }),
+
+    this.ArtistCardService.getArtistCards().subscribe((data: ArtistCardModel []) =>{
+      console.log("Fetching products");
+      for (var artistCard of data){
+        console.log(artistCard);
+        this.artistCards.push(artistCard);
+      }
     });
-  }
+    
+    
+  };
 
 }
