@@ -1,0 +1,7 @@
+<div class="headerContainer">
+    <div class="headerWrapper">
+        <a class="header" routerLink="artist-page-layout">
+            Fans Also Like
+        </a>
+    </div>
+</div>
