@@ -1,0 +1,15 @@
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'app-fans-also-like-header',
+  templateUrl: './fans-also-like-header.component.html',
+  styleUrls: ['./fans-also-like-header.component.css']
+})
+export class FansAlsoLikeHeaderComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit(): void {
+  }
+
+}
