@@ -1,5 +1,5 @@
 <div class="Container-fluid" style="overflow: hidden;" id="sidebar">
-    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 text-white min-vh-100" style="height:100%;">
+    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 text-white min-vh-100" style="height:100vh;">
         <a href="/" class="d-flex align-items-center text-white text-decoration-none" style="padding-top: 16px;">
             <span class="fs-5 d-none d-sm-inline">
                 <svg xmlns="http://www.w3.org/2000/svg" id="spotifyLogo" class="bi bi-spotify" viewBox="0 0 16 16"
